<resources><string name="GoogleMapsAPIKey">AIzaSyBF5ebfc_6Vbz0dYIHYxeoqkWIszWRav-0</string><string name="Username">Username</string><string name="Password">Password</string><string name="Anonymous">Anonymous</string><string name="Password_Recover">Password Recover</string><string name="Register">Register</string><string name="GreenOcupation">&lt; 70% ocupação</string><string name="YellowOcupation">&lt; 90% ocupação</string><string name="RedOcupation">&gt; 90% ocupação</string><string name="ParkData_Timetable">Aberto das {0} até às {1}</string><string name="ParkData_Price">Preço por hora: {0}</string></resources>