<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@android:color/white" xmlns:android="http://schemas.android.com/apk/res/android"><ImageView android:src="@drawable/myparker_title" android:layout_width="571dp" android:layout_height="160dp" android:id="@+id/imageLogo" android:layout_alignTop="@+id/textViewPasswordRecover" android:layout_marginTop="15dp" android:layout_centerHorizontal="true" /><TextView android:text="@string/Username" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/imageLogo" android:id="@+id/textViewUsername" android:gravity="center_horizontal" android:layout_centerHorizontal="true" /><AutoCompleteTextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/textViewUsername" android:layout_marginLeft="17dp" android:layout_marginRight="17dp" android:layout_marginTop="3dp" android:layout_marginBottom="10dp" android:id="@+id/editTextUsername" android:gravity="center_horizontal" android:layout_centerHorizontal="true" android:background="#fff2f2f2" /><TextView android:text="@string/Password" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/editTextUsername" android:id="@+id/textViewPassword" android:gravity="center_horizontal" android:layout_centerHorizontal="true" /><EditText android:inputType="textPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/textViewPassword" android:layout_marginLeft="17dp" android:layout_marginRight="17dp" android:layout_marginTop="3dp" android:layout_marginBottom="10dp" android:id="@+id/editTextPassword" android:gravity="center_horizontal" android:layout_centerHorizontal="true" android:shadowColor="#ffececec" android:background="#fff2f2f2" android:password="true" /><Button android:text="Login" android:layout_width="220dp" android:layout_height="wrap_content" android:id="@+id/buttonLogin" android:layout_below="@id/editTextPassword" android:layout_centerHorizontal="true" android:layout_marginTop="30dp" /><Button android:text="Login Facebook" android:layout_width="220dp" android:layout_height="wrap_content" android:layout_below="@id/buttonLogin" android:id="@+id/buttonLoginFacebook" android:layout_centerHorizontal="true" /><Button android:text="Login Google" android:layout_width="220dp" android:layout_height="wrap_content" android:layout_below="@id/buttonLoginFacebook" android:id="@+id/buttonLoginGoogle" android:layout_centerHorizontal="true" /><TextView android:text="@string/Anonymous" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textViewAnonymous" android:linksClickable="true" android:autoLink="all" android:layout_below="@id/buttonLoginGoogle" android:layout_centerHorizontal="true" android:layout_marginTop="10dp" /><TextView android:text="@string/Password_Recover" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textViewPasswordRecover" android:autoLink="all" android:linksClickable="true" android:layout_alignParentLeft="true" android:layout_marginLeft="15dp" android:layout_alignParentTop="true" android:layout_marginBottom="10dp" /><TextView android:text="@string/Register" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textViewRegister" android:linksClickable="true" android:autoLink="all" android:layout_alignParentRight="true" android:layout_marginRight="15dp" android:layout_alignParentTop="true" android:layout_marginBottom="10dp" /></RelativeLayout>